--- a/docs/bachelor/content/introduction.tex
+++ b/docs/bachelor/content/introduction.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 
 Zero Knowledge Proofs (ZKPs) are a powerful cryptography primitive. They allow
-for the verification of a statement's truth without disclosing or in any way revealing
+for the verification of statement's truth without disclosing or in any way revealing
 the actual content of the statement. This characteristic is crucial for
 maintaining trust between parties while also preserving privacy \cite{goldreich1991proofs}.
 
