--- a/docs/bachelor/pages/annotation.tex
+++ b/docs/bachelor/pages/annotation.tex
@@ -24,11 +24,11 @@
 \bigskip{}
 
 Bakalárska práca skúma aplikáciu dôkazov s nulovým vedomím (ZKPs) v
-blockchaine. Dôkazy s nulovým vedomím sú kryptografická metóda, ktorá
+blockchainoch. Dôkazy s nulovým vedomím sú kryptografická metóda, ktorá
 umožňuje overenie dát bez odhalenia samotných dát, čo je ideálne pre bezpečné
 a súkromné aplikácie v blockchainoch. Táto práca je zameraná na návrh
 a implementáciu konceptu schémy tajných adries s použitím ZKPs. Táto schéma
-umožňuje odosielateľom odvodiť tajnú adresu z verejných údajov príjemcu.
+umožňuje odosielateľom vytvoriť tajnú adresu z verejných údajov príjemcu.
 Iba príjemca má kontrolu nad touto adresou, a zaroveň neodhaľuje žiadne informácie
 o tom, kto príjemca je.
 
@@ -68,15 +68,15 @@ implementácie schémy tajných adries s použitím ZKPs.
 
 \bigskip{}
 
-This bachelor's thesis investigates the application of Zero Knowledge Proofs
+This bachelor's thesis investigates application of Zero Knowledge Proofs
 (ZKPs) in blockchains. Zero Knowledge Proofs are a cryptographic
-method which enables the validation of data without revealing the
+method which enables validation of data without revealing underlying
 data itself, making it ideal for secure and private applications in
-blockchain networks. The focus of this thesis is the design and implementation
-of a proof of concept Stealth Address scheme using ZKPs. This scheme allows any sender to
-derive a stealth address from recipients public data. Only the recipient has
-control over this address, yet it does not leak any information about who the
-recipient is.
+blockchain networks. Focus of this thesis is design and implementation
+of a proof of concept Stealth Address scheme using ZKPs. This scheme allows
+any sender to derive a stealth address from recipients public data. Only the
+recipient has control over this address, yet it does not leak any information
+about who the recipient is.
 
 The research includes an analysis of the cryptographic principles behind
 ZKPs, followed by an explanation of the Stealth Address scheme's design and
