--- a/docs/bachelor/values.tex
+++ b/docs/bachelor/values.tex
@@ -23,7 +23,7 @@
 \newcommand{\FIITdate}[0] {December 2023}
 \newcommand{\FIITdateSK}[0] {December 2023}
 \newcommand{\FIITstudyProgram}[0] {Informatics}
-\newcommand{\FIITstudyProgramSK}[0] {Informačná bezpečnosť}
+\newcommand{\FIITstudyProgramSK}[0] {Informatika}
 \newcommand{\FIITstudyField}[0] {Computer Science}
 \newcommand{\FIITdegreeCourseSK}[0] {9.2.1 Informatika}
 \newcommand{\FIITinstitute}[0] {Institute of Computer Engineering and Applied Informatics}
