fix: iitsrc typos

--- a/docs/iitsrc/main.tex
+++ b/docs/iitsrc/main.tex
@@ -432,8 +432,8 @@
     stealth wallet is the one sending the transaction. Without this check a malicious
     actor could copy the proof and send a transaction with higher fee, which would
     give him access to the wallet sooner, because it would be placed higher in
-    the block. Since only Bob knows both secret values and am address from which
-    he will be sending transaction, only can create create a valid proof and thus
+    the block. Since only Bob knows both secret values and an address from which
+    he will be sending transaction, only he can create a valid proof and thus
     interact with the wallet.
 
 \section{Implementation}\label{implementation}
