docs: iitsrc replace contractions

--- a/docs/iitsrc/main.tex
+++ b/docs/iitsrc/main.tex
@@ -147,7 +147,7 @@
         \end{figure}
 
 
-        If Alice was a cheating prover, and she didn't have the algorithm for
+        If Alice was a cheating prover, and she did not have the algorithm for
         generating pairs from $QR$, then the probability that Bob's coin toss favors
         Alice is one half. With one half probability Bob would ask cheating prover
         Alice to give him the equation she can not solve, because if the prover is
@@ -163,9 +163,9 @@
         is how many different interactions they performed.
 
         Thanks to the randomness of the coin toss, there are $2^k$ possibilities how
-        the interaction can go. Since Alice can't reliably predict what the random
+        the interaction can go. Since Alice can not reliably predict what the random
         coin toss will yield, she must be ready to provide both equations. Thus Bob is
-        convinced, that Alice isn't cheating, with probability $P(Accept) = (0.5)^k$,
+        convinced, that Alice is not cheating, with probability $P(Accept) = (0.5)^k$,
         and can accept the proof.
 
     \subsection{Overcoming limitation of an interactive proof}
@@ -354,7 +354,7 @@
         ones. Many researchers are studying this field and it is not considered 
         as a cryptography for nerds anymore.
 
-        On the other hand, there aren't many contributions to the stealth address
+        On the other hand, there are not many contributions to the stealth address
         ecosystem. There are two protocols on Ethereum that implement stealth addresses.
         First one is called Umbra\cite{umbra}, and it is based on elliptic curve
         cryptography.
@@ -559,7 +559,7 @@
     proving knowledge of both secret values, to withdraw funds from their
     corresponding stealth wallets. The design also ensures that proofs can
     only be valid when submitted by the specific recipient who owns both
-    secret values. It's important to note that the current implementation
+    secret values. It is important to note that the current implementation
     serves as a proof of concept, and further development
     would be necessary for real-world deployment as a full-featured wallet. 
 
