docs: iitsrc downsize backround images

--- a/docs/iitsrc/main.tex
+++ b/docs/iitsrc/main.tex
@@ -137,7 +137,7 @@
 
         \begin{figure}[h!]
             \centering
-            \includegraphics[scale=0.5]{../bachelor/assets/images/qr_ip.png}
+            \includegraphics[scale=0.4]{../bachelor/assets/images/qr_ip.png}
             \caption{Interactive proof of language QR}
             \cite{Goldwasser1989, youtubeMOOCLecture1}
             \label{fig:qr_ip}
@@ -202,7 +202,7 @@
 
         \begin{figure}[h]
             \centering
-            \includegraphics[scale=0.7]{../bachelor/assets/images/interactive_coin.png}
+            \includegraphics[scale=0.4]{../bachelor/assets/images/interactive_coin.png}
             \caption{Interactive public coin proof}
             \label{fig:interactive_coin}
             \cite{Goldwasser1986, youtubeMOOCLecture1}
@@ -211,24 +211,23 @@
 
         \begin{figure}[h]
             \centering
-            \includegraphics[scale=0.7]{../bachelor/assets/images/non_interactive_coin.png}
+            \includegraphics[scale=0.4]{../bachelor/assets/images/non_interactive_coin.png}
             \caption{Non-interactive public coin proof}
             \label{fig:non_interactive_coin}
             \cite{Fiat, youtubeMOOCLecture1}
             \vspace{0.5cm}
         \end{figure}
 
-        Alice can publish the transactipt string somewhere public, and anybody
+        Alice can publish the transcript string somewhere public, and anybody
         can rerun the interaction with the string in order to verify that Alice
         is lying or not.
-        \pagebreak
 
     \subsection{Arithmetic circuit}
 
         While in theory any NP statement \cite{goldreich1991proofs} can be proven using
         interactive proofs, practical implementation requires specific definition and
         encoding of the statement. There are two main models of general computation,
-        those are circuits and turing machines. To trace the computation of a turing
+        those are circuits and Turing machines. To trace the computation of a Turing
         machine, the representation needs to somehow handle memory and thus would accrue
         more complexity than if a circuit is used. To represent a statement as a
         circuit, an arithmetic circuit, a computation model composed of addition and
@@ -248,7 +247,7 @@
 
         \begin{figure}[h]
             \centering
-            \includegraphics[scale=0.3]{../bachelor/assets/images/dag_example.png}
+            \includegraphics[scale=0.15]{../bachelor/assets/images/dag_example.png}
             \caption{Graph representation of arithmetic circuit}
             \label{fig:dag_example}
             \cite{youtuMOOCLecture3}
