docs: iitsrc move future work to conclusion

--- a/docs/iitsrc/main.tex
+++ b/docs/iitsrc/main.tex
@@ -364,7 +364,6 @@
         \href{https://twitter.com/nocturne_xyz/status/1749510390906511693}{Twitter post}
         they are discontinuing their protocol.
 
-
 \section{Solution Design}
 
     The core principle behind the solution is that both
@@ -442,7 +441,8 @@
         \label{fig:high-level-flow}
     \end{figure}
 
-\section{Future work}
+\section{Conclusion and Future Work}
+
     This study opens up few avenues for future research and improvements
     to this proof of concept:
 
@@ -456,9 +456,7 @@
         \item Incorporate recoverability into stealth wallets.
     \end{enumerate}
 
-\section{Conclusion and Future Work}
-
-    This study investigated the application of Zero-Knowledge Proofs (ZKPs)
+    The work investigated the application of Zero-Knowledge Proofs (ZKPs)
     in stealth addresses schema on Ethereum. The primary research
     goal was to design and implement a proof of concept stealth address schema
     which utilizes ZKPs to achieve privacy of transactions.
