docs: iitsrc evaluation

--- a/docs/iitsrc/main.tex
+++ b/docs/iitsrc/main.tex
@@ -482,6 +482,20 @@
             unauthorized access or loss of funds.
     \end{itemize}
 
+\section{Evaluation}
+
+    The stealth address ZKP scheme successfully enables private transactions.
+    It effectively hides the recipient's identity, yet he/she still has control
+    over received funds, thanks to zero-knowledge proofs. They also ensuring no
+    direct link between transactions and the recipient can be created.
+    Simultaneously, only the intended recipient can generate the necessary
+    ZKPs to access funds, through possessing both secret values. This
+    guarantees exclusive control over stealth addresses.
+
+    The scheme offers a compelling solution for privacy-centric cryptocurrency
+    use cases. While security considerations must be addressed more thoroughly, it
+    demonstrates the potential of ZKPs in enhancing blockchain anonymity.
+
 \section{Conclusion and Future Work}
 
     This study opens up few avenues for future research and improvements
